@@ -5,6 +5,7 @@
 	- display content file pattern info if deabug info is enabled
 	- q3frame replaced by qframe
 	- q3whatsthis removed
+	- q3strlist replaced by qstringlist
 
 17. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- handle files larger than 1tb fixed
